--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor/app": "6.0.2",
     "@capacitor/core": "6.2.0",
+    "@capacitor/geolocation": "^6.1.0",
     "@capacitor/google-maps": "^6.0.1",
     "@capacitor/haptics": "6.0.2",
     "@capacitor/ios": "6.2.0",
