--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "devDependencies": {
     "@capacitor/cli": "6.2.0",
     "@types/axios": "^0.14.4",
+    "@types/google.maps": "^3.58.1",
+    "@types/node": "^22.10.9",
     "@vitejs/plugin-legacy": "^5.4.3",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-typescript": "^14.2.0",
@@ -40,7 +42,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^22.1.0",
     "terser": "^5.37.0",
-    "typescript": "~5.6.3",
+    "typescript": "~5.7.3",
     "vite": "~5.2.14",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.2.0"
