--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "validate": "vue-tsc",
     "build": "vite build",
-    "sync:ios": "ionic cap sync ios",
+    "sync:ios": "cap sync ios",
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
