--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "6.2.0",
     "@types/axios": "^0.14.4",
     "@vitejs/plugin-legacy": "^5.4.3",
