--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@capacitor/preferences": "^7.0.0",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/storage": "^4.0.0",
-    "@ionic/vue": "^8.4.1",
-    "@ionic/vue-router": "^8.4.1",
-    "axios": "^1.7.9",
+    "@ionic/vue": "^8.4.3",
+    "@ionic/vue-router": "^8.4.3",
+    "axios": "^1.8.1",
     "ionicons": "^7.4.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -36,20 +36,28 @@
     "@capacitor/cli": "^7.0.1",
     "@types/axios": "^0.14.4",
     "@types/google.maps": "^3.58.1",
-    "@types/node": "^22.10.9",
+    "@types/node": "^22.13.5",
     "@vitejs/plugin-legacy": "^5.4.3",
     "@vitejs/plugin-vue": "^4.6.2",
-    "@vue/eslint-config-typescript": "^14.2.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/test-utils": "^2.4.6",
     "cypress": "^13.17.0",
-    "eslint": "^9.17.0",
+    "eslint": "^9.21.0",
     "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^22.1.0",
-    "terser": "^5.37.0",
+    "terser": "^5.39.0",
     "typescript": "~5.7.3",
-    "vite": "~5.4.12",
+    "vite": "~5.4.14",
     "vitest": "^0.34.6",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "core-js"
+    ],
+    "onlyBuiltDependencies": [
+      "core-js"
+    ]
+  }
 }
