--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@capacitor/app": "6.0.2",
-    "@capacitor/core": "^6.2.0",
-    "@capacitor/geolocation": "^6.1.0",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/core": "^7.0.1",
+    "@capacitor/geolocation": "^7.1.1",
     "@capacitor/google-maps": "^6.0.1",
-    "@capacitor/haptics": "6.0.2",
-    "@capacitor/ios": "6.2.0",
-    "@capacitor/keyboard": "6.0.3",
-    "@capacitor/preferences": "^6.0.3",
-    "@capacitor/status-bar": "6.0.2",
+    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/ios": "^7.0.1",
+    "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/preferences": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^8.4.3",
     "@ionic/vue-router": "^8.4.3",
